--- a/_posts/2019-01-27-351-npdp.md
+++ b/_posts/2019-01-27-351-npdp.md
@@ -15,7 +15,7 @@ PMP：行为
 
 以软件开发为例：定义、设计、开发、发布、改进等五个阶段。
 
-# 定义
+> 定义
 
 + 调研
   + 市场调查
@@ -27,7 +27,7 @@ PMP：行为
   + 用户需求
   + 功能列表
 
-# 设计
+> 设计
 
 + 设计原型
   + 业务流程
@@ -39,7 +39,7 @@ PMP：行为
   + 功能/交互界面
   + 交互设计（规范）
 
-# 开发（PMP相关内容[项目经理责任范围]）
+> 开发（PMP相关内容[项目经理责任范围]）
 
 + 代码
   + 开发进度管理
@@ -50,7 +50,7 @@ PMP：行为
   + 可用性测试
   + 用户体验测试
 
-# 发布
+> 发布
 
 + 发布准备
   + 用户教育
@@ -59,7 +59,7 @@ PMP：行为
   + 运营策略
   + 产品定价
 
-# 改进
+> 改进
 
 + 数据分析
   + 用户反馈
@@ -67,3 +67,96 @@ PMP：行为
   + 数据分析
   + 运营策略调整
   + 数据挖掘
+  
+> 产品经理的意识
+
++ 成本意识
++ 销售意识
++ 团队意识
++ 全局意识
+
+成本意识：固定成本与可变成本的关系，售价与销量的关系
+
+销售意识：DDMD，随时可以去演示，好的产品会自我推销
+
+团队意识：牛B, 装B, SB, 2B, 情商与智商的关系（IQ,EQ）
+
+全局意识：
+
+> 项目经理的工作
+
++ 写文档
+  + 需求分析
+  + 功能用例
+  + 竞争分析
+  + 盈利分析
+  + 工具：Word/PPT/PDF
++ 画原型（低保真图）
+  + 用户流程
+  + 界面框架
+  + 交互设计
+  + 工具：Axure/Visio/MindManage
++ 项目管理
+  + 开发生命周期
+  + 需求管理
+  + 团队协作
+  + 工具：SVC/PM software
++ 数据分析
+  + 运营数据分析
+  + 市场分析
+  + 工具：Excel/baidu/google
+
+> 产品经理的进阶
+
++ 第一级：定义客户需求
++ 第二级：协调产品开发
++ 第三级：市场管理
++ 第四级：Mini-CEO:产品战略
+
+
+需求为什么不对？
+
+1. 找的人不对
+2. 人找对了，搞不清楚自己要什么
+3. 知道自己要什么，但是表达不出来
+4. 他不愿意讲需求，客户管理不到位
+
+新产品创新从哪里来？
+
+1. 企业战略中来
+2. 客户需求中来
+3. 竞争对手中来
+
+新产品开发是相当复杂的活动
+
+影响因素多
+
++ 可控
+  + 公司文化
+  + 战略
+  + 能力
+  + 组织
+  + 财力
++ 不可控
+  + 竞争对手
+  + 政府法规
+  + 国际环境
+  
+利益关系者多
+
++ 内部
+  + 董事会
+  + 产品组
+  + 营销组
+  + 财务
+  + 采购
++ 外部
+  + 咨询顾问
+  + 供应商
+  + 监管部门
+  + 代理
+  + 客户/用户
+  
+
+
+
