--- a/_posts/2019-02-27-354-golangbot.md
+++ b/_posts/2019-02-27-354-golangbot.md
@@ -5,9 +5,9 @@ pid: 354
 tags: [go]
 ---
 
-GO语言最好教程
+GO语言的教程
 
 由于涉及版权，我不会做摘录，需要的话，请到下面的链接地址查看，一个是原文，一个是翻译，都很不错。
 
-+ [golangbot.com](https://golangbot.com/learn-golang-series/)
-+ [Go 系列教程](https://studygolang.com/subject/2)
+1. [golangbot.com](https://golangbot.com/learn-golang-series/)
+2. [Go 系列教程](https://studygolang.com/subject/2)
