--- a/_posts/2019-02-28-355-k8s.md
+++ b/_posts/2019-02-28-355-k8s.md
@@ -5,8 +5,7 @@ pid: 355
 tags: [go, k8s]
 ---
 
-从今天开始撸K8S源代码！
-
+开始撸K8S源代码！
 
 ```Command Shell
 D:\go\src>mkdir k8s.io
@@ -15,13 +14,16 @@ D:\go\src\k8s.io>git clone https://github.com/kubernetes/kubernetes.git
 D:\go\src\k8s.io>git clone https://github.com/kubernetes/apimachinery.git
 D:\go\src\k8s.io>git clone https://github.com/kubernetes/cli-runtime.git
 D:\go\src\k8s.io>git clone https://github.com/kubernetes/client-go.git
+D:\go\src\k8s.io>git clone https://github.com/kubernetes/apiserver.git
+D:\go\src\k8s.io>git clone https://github.com/kubernetes/component-base.git
+D:\go\src\k8s.io>git clone https://github.com/kubernetes/api.git
+D:\go\src\k8s.io>git clone https://github.com/kubernetes/kube-scheduler.git
 D:\go\src\k8s.io>cd kubernetes
 D:\go\src\k8s.io\kubernetes>git branch -av
 D:\go\src\k8s.io\kubernetes>git checkout release-1.14
-
 ```
 
+## 参考
 
-# 参考
 + [k8s ：源代码导入](https://segmentfault.com/a/1190000013750495)
 + [xingpingz](https://segmentfault.com/u/xingpingz/articles)
