--- a/_posts/2019-03-01-356-cobra.md
+++ b/_posts/2019-03-01-356-cobra.md
@@ -7,10 +7,8 @@ tags: [go, k8s]
 
 http://dockone.io/people/%E9%9A%BE%E6%98%93
 
-
-https://www.cnblogs.com/yangxiaoyi/p/9221683.html
-
-https://github.com/spf13/cobra
-
-
-https://o-my-chenjian.com/2017/09/20/Using-Cobra-With-Golang/
+# 参考
++ [Golang之使用Cobra](https://o-my-chenjian.com/2017/09/20/Using-Cobra-With-Golang/)
++ [Cobra简介](https://time-track.cn/cobra-brief-introduction.html)
++ [golang命令行库cobra的使用](http://www.cnblogs.com/borey/p/5715641.html)
++ [Golang之使用Flag和Pflag](https://o-my-chenjian.com/2017/09/20/Using-Flag-And-Pflag-With-Golang/)
