--- a/_posts/2019-04-29-363-make.md
+++ b/_posts/2019-04-29-363-make.md
@@ -16,3 +16,11 @@ tags: [centos, k8s]
 所以，我决定，我先理解一下编译过程，然后再做深入的学习。
 
 先看 make
+
+
+
+
+
+# 参考
+
+[Make 命令教程](http://www.ruanyifeng.com/blog/2015/02/make.html)
