--- a/_posts/2019-05-05-364-aesthetics.md
+++ b/_posts/2019-05-05-364-aesthetics.md
@@ -465,82 +465,82 @@ Arthur Danto 出席展览开幕式最多的美学家
 
 ![](/uploads/2019/05/05-84.jpg)
 
-![](/uploads/2019/05/05-85.jpg
+![](/uploads/2019/05/05-85.jpg)
 
-![](/uploads/2019/05/05-86.jpg
+![](/uploads/2019/05/05-86.jpg)
 
-![](/uploads/2019/05/05-87.jpg
+![](/uploads/2019/05/05-87.jpg)
 
-![](/uploads/2019/05/05-88.jpg
+![](/uploads/2019/05/05-88.jpg)
 
-![](/uploads/2019/05/05-89.jpg
+![](/uploads/2019/05/05-89.jpg)
 
-![](/uploads/2019/05/05-90.jpg
+![](/uploads/2019/05/05-90.jpg)
 
-![](/uploads/2019/05/05-91.jpg
+![](/uploads/2019/05/05-91.jpg)
 
-![](/uploads/2019/05/05-92.jpg
+![](/uploads/2019/05/05-92.jpg)
 
-![](/uploads/2019/05/05-93.jpg
+![](/uploads/2019/05/05-93.jpg)
 
-![](/uploads/2019/05/05-94.jpg
+![](/uploads/2019/05/05-94.jpg)
 
-![](/uploads/2019/05/05-95.jpg
+![](/uploads/2019/05/05-95.jpg)
 
-![](/uploads/2019/05/05-96.jpg
+![](/uploads/2019/05/05-96.jpg)
 
-![](/uploads/2019/05/05-97.jpg
+![](/uploads/2019/05/05-97.jpg)
 
-![](/uploads/2019/05/05-98.jpg
+![](/uploads/2019/05/05-98.jpg)
 
-![](/uploads/2019/05/05-99.jpg
+![](/uploads/2019/05/05-99.jpg)
 
-![](/uploads/2019/05/05-100.jpg
+![](/uploads/2019/05/05-100.jpg)
 
-![](/uploads/2019/05/05-101.jpg
+![](/uploads/2019/05/05-101.jpg)
 
-![](/uploads/2019/05/05-102.jpg
+![](/uploads/2019/05/05-102.jpg)
 
-![](/uploads/2019/05/05-103.jpg
+![](/uploads/2019/05/05-103.jpg)
 
-![](/uploads/2019/05/05-104.jpg
+![](/uploads/2019/05/05-104.jpg)
 
-![](/uploads/2019/05/05-105.jpg
+![](/uploads/2019/05/05-105.jpg)
 
-![](/uploads/2019/05/05-106.jpg
+![](/uploads/2019/05/05-106.jpg)
 
-![](/uploads/2019/05/05-107.jpg
+![](/uploads/2019/05/05-107.jpg)
 
-![](/uploads/2019/05/05-108.jpg
+![](/uploads/2019/05/05-108.jpg)
 
-![](/uploads/2019/05/05-109.jpg
+![](/uploads/2019/05/05-109.jpg)
 
-![](/uploads/2019/05/05-110.jpg
+![](/uploads/2019/05/05-110.jpg)
 
-![](/uploads/2019/05/05-111.jpg
+![](/uploads/2019/05/05-111.jpg)
 
-![](/uploads/2019/05/05-112.jpg
+![](/uploads/2019/05/05-112.jpg)
 
-![](/uploads/2019/05/05-113.jpg
+![](/uploads/2019/05/05-113.jpg)
 
-![](/uploads/2019/05/05-114.jpg
+![](/uploads/2019/05/05-114.jpg)
 
-![](/uploads/2019/05/05-115.jpg
+![](/uploads/2019/05/05-115.jpg)
 
-![](/uploads/2019/05/05-116.jpg
+![](/uploads/2019/05/05-116.jpg)
 
-![](/uploads/2019/05/05-117.jpg
+![](/uploads/2019/05/05-117.jpg)
 
-![](/uploads/2019/05/05-118.jpg
+![](/uploads/2019/05/05-118.jpg)
 
-![](/uploads/2019/05/05-119.jpg
+![](/uploads/2019/05/05-119.jpg)
 
-![](/uploads/2019/05/05-120.jpg
+![](/uploads/2019/05/05-120.jpg)
 
-![](/uploads/2019/05/05-121.jpg
+![](/uploads/2019/05/05-121.jpg)
 
-![](/uploads/2019/05/05-122.jpg
+![](/uploads/2019/05/05-122.jpg)
 
-![](/uploads/2019/05/05-123.jpg
+![](/uploads/2019/05/05-123.jpg)
 
-![](/uploads/2019/05/05-124.jpg
+![](/uploads/2019/05/05-124.jpg)
