--- a/_posts/2019-05-10-367-fire.md
+++ b/_posts/2019-05-10-367-fire.md
@@ -23,3 +23,6 @@ tags: [管理]
 + 通过行之有效的管理方法来产生经济效益
 
 技术需要借助于业务才能够体现出它的价值。
+
+参考：
+[假如40岁时会被裁员，从现在开始你会怎么做？](https://mp.weixin.qq.com/s/nsIawlc3XPmzHRq2bh-WiA)
