--- a/_posts/2019-05-30-368-hd1.md
+++ b/_posts/2019-05-30-368-hd1.md
@@ -29,7 +29,17 @@ tags: [货代]
 
 3、毛重
 
-4、 体积各项型最大体积为：(长*宽*高)可装体积，可装重量 1×20’GP=31CBM6*2.38*2.382517MT1×40’GP=67CBM12*2.38*2.385525MT1×40’HC=76CBM12*2.7*2.381×45’GP=86CBM（注：GPgeneralpurpose 普通箱；CBMcubicmetre立方米；MTmetricton公吨；HChighcubic高箱）
+4、 体积各项型最大体积为：(长*宽*高)可装体积，可装重量 
+
+1×20’GP=31CBM 6\*2.38\*2.382517MT
+
+1×40’GP=67CBM 12\*2.38\*2.385525MT
+
+1×40’HC=76CBM 12\*2.7\*2.38
+
+1×45’GP=86CBM
+
+（注：GPgeneralpurpose 普通箱；CBMcubicmetre立方米；MTmetricton公吨；HChighcubic高箱）
 
 5、付费条款、货主联系方法
 
