--- a/_posts/2019-06-03-375-mba.md
+++ b/_posts/2019-06-03-375-mba.md
@@ -92,11 +92,11 @@ tags: [MBA]
 
 第七章 公司金融模块
 
-+ [第1节 资本视角下的公司运营](/2018-10-24-292-gsjrx01.html)
-+ [第2节 金融财务会计联动的资本战略](/2018-10-24-292-gsjrx02.html)
-+ [第3节 产融结合的创新商业模式](/2018-10-24-292-gsjrx03.html)
-+ [第4节 风险意识与财务管控](/2018-10-24-292-gsjrx04.html)
-+ [第5节 投融资决策与企业价值管理](/2018-10-24-292-gsjrx05.html)
++ [第1节 资本视角下的公司运营](./2018-10-24-292-gsjrx01.html)
++ [第2节 金融财务会计联动的资本战略](./2018-10-24-292-gsjrx02.html)
++ [第3节 产融结合的创新商业模式](./2018-10-24-292-gsjrx03.html)
++ [第4节 风险意识与财务管控](./2018-10-24-292-gsjrx04.html)
++ [第5节 投融资决策与企业价值管理](./2018-10-24-292-gsjrx05.html)
 
 第八章 商业模式模块
 
