--- a/_posts/2019-06-03-375-mba.md
+++ b/_posts/2019-06-03-375-mba.md
@@ -57,24 +57,24 @@ tags: [MBA]
 
 第二章 领导力模块
 
-+ [第1节 如何找到最佳领导区]()
++ [第1节 如何找到最佳领导区](http://www.baoguoding.com/2018/04/274-tal.html)
 + [第2节 如何应对压力和保持专注]()
 + [第3节 如何打造最优领导关系]()
 
 第三章 财务会计模块
 
-+ [第1节 财务分析与企业生命周期]()
-+ [第2节 财务报表的原理]()
-+ [第3节 财务报表的应用]()
-+ [第4节 财务报表的分析方法和案例]()
-+ [第5节 六段式表格及其运用]()
++ [第1节 财务分析与企业生命周期](http://www.baoguoding.com/2018/10/300-xcw01.html)
++ [第2节 财务报表的原理](http://www.baoguoding.com/2018/10/301-xcw02.html)
++ [第3节 财务报表的应用](http://www.baoguoding.com/2018/10/302-xcw03.html)
++ [第4节 财务报表的分析方法和案例](http://www.baoguoding.com/2018/10/303-xcw04.html)
++ [第5节 六段式表格及其运用](http://www.baoguoding.com/2018/10/304-xcw05.html)
 
 第四章 人力资源管理模块
 
-+ [第1节 人力资源管理创新与重构]()
-+ [第2节 人力资源管理的战略思考]()
-+ [第3节 组织运行、制度体系与文化整合]()
-+ [第4节 文化整合与管理圣经]()
++ [第1节 人力资源管理创新与重构](http://www.baoguoding.com/2018/10/305-xyl01.html)
++ [第2节 人力资源管理的战略思考](http://www.baoguoding.com/2018/10/306-xyl02.html)
++ [第3节 组织运行、制度体系与文化整合](http://www.baoguoding.com/2018/10/307-xyl03.html)
++ [第4节 文化整合与管理圣经](http://www.baoguoding.com/2018/11/308-xyl04.html)
 
 第五章 经济学模块
 
@@ -85,22 +85,22 @@ tags: [MBA]
 
 第六章 市场营销模块
 
-+ [第1节 何为市场营销]()
-+ [第2节 4P&4C理论与市场营销研发]()
-+ [第3节 定价工具与技术]()
-+ [第4节 注意力缺失世界中的品牌与促销]()
++ [第1节 何为市场营销](http://www.baoguoding.com/2018/11/309-marketing01.html)
++ [第2节 4P&4C理论与市场营销研发](http://www.baoguoding.com/2018/11/310-marketing02.html)
++ [第3节 定价工具与技术](http://www.baoguoding.com/2018/11/311-marketing03.html)
++ [第4节 注意力缺失世界中的品牌与促销](http://www.baoguoding.com/2018/11/312-marketing04.html)
 
 第七章 公司金融模块
 
-+ [第1节 资本视角下的公司运营](./2018-10-24-292-gsjrx01.html)
-+ [第2节 金融财务会计联动的资本战略](./2018-10-24-292-gsjrx02.html)
-+ [第3节 产融结合的创新商业模式](./2018-10-24-292-gsjrx03.html)
-+ [第4节 风险意识与财务管控](./2018-10-24-292-gsjrx04.html)
-+ [第5节 投融资决策与企业价值管理](./2018-10-24-292-gsjrx05.html)
++ [第1节 资本视角下的公司运营](http://www.baoguoding.com/2018/10/292-gsjrx01.html)
++ [第2节 金融财务会计联动的资本战略](http://www.baoguoding.com/2018/10/293-gsjrx02.html)
++ [第3节 产融结合的创新商业模式](http://www.baoguoding.com/2018/10/294-gsjrx03.html)
++ [第4节 风险意识与财务管控](http://www.baoguoding.com/2018/10/295-gsjrx04.html)
++ [第5节 投融资决策与企业价值管理](http://www.baoguoding.com/2018/10/296-gsjrx05.html)
 
 第八章 商业模式模块
 
-+ [第1节 商业模式的原理和实践上]()
++ [第1节 商业模式的原理和实践上](http://www.baoguoding.com/2018/11/313-syms01.html)
 + [第2节 商业模式和原理和实践下]()
 + [第3节 “魏朱六要素商业模式”深度解构]()
 + [第4节 商业模式与竞争优势]()
