--- a/_posts/2019-06-03-375-mba.md
+++ b/_posts/2019-06-03-375-mba.md
@@ -6,83 +6,83 @@ tags: [MBA]
 ---
 
 第一章 先导课程模块
-+ [第1节 领导力原则]()
-+ [第2节 人力资源是CEO第一工程]()
-+ [第3节 可复制的领导力]()
++ [第1节 俞敏洪 领导力原则]()
++ [第2节 张丽俊 人力资源是CEO第一工程]()
++ [第3节 樊登 可复制的领导力]()
 
 第二章 领导力模块
-+ [第1节 如何找到最佳领导区](http://www.baoguoding.com/2018/04/274-tal.html)
-+ [第2节 如何应对压力和保持专注]()
-+ [第3节 如何打造最优领导关系]()
++ [第1节 泰勒·本-沙哈尔 如何找到最佳领导区](http://www.baoguoding.com/2018/04/274-tal.html)
++ [第2节 泰勒·本-沙哈尔 如何应对压力和保持专注]()
++ [第3节 泰勒·本-沙哈尔 如何打造最优领导关系]()
 
 第三章 财务会计模块
-+ [第1节 财务分析与企业生命周期](http://www.baoguoding.com/2018/10/300-xcw01.html)
-+ [第2节 财务报表的原理](http://www.baoguoding.com/2018/10/301-xcw02.html)
-+ [第3节 财务报表的应用](http://www.baoguoding.com/2018/10/302-xcw03.html)
-+ [第4节 财务报表的分析方法和案例](http://www.baoguoding.com/2018/10/303-xcw04.html)
-+ [第5节 六段式表格及其运用](http://www.baoguoding.com/2018/10/304-xcw05.html)
++ [第1节 单喆慜 财务分析与企业生命周期](http://www.baoguoding.com/2018/10/300-xcw01.html)
++ [第2节 单喆慜 财务报表的原理](http://www.baoguoding.com/2018/10/301-xcw02.html)
++ [第3节 单喆慜 财务报表的应用](http://www.baoguoding.com/2018/10/302-xcw03.html)
++ [第4节 单喆慜 财务报表的分析方法和案例](http://www.baoguoding.com/2018/10/303-xcw04.html)
++ [第5节 单喆慜 六段式表格及其运用](http://www.baoguoding.com/2018/10/304-xcw05.html)
 
 第四章 人力资源管理模块
-+ [第1节 人力资源管理创新与重构](http://www.baoguoding.com/2018/10/305-xyl01.html)
-+ [第2节 人力资源管理的战略思考](http://www.baoguoding.com/2018/10/306-xyl02.html)
-+ [第3节 组织运行、制度体系与文化整合](http://www.baoguoding.com/2018/10/307-xyl03.html)
-+ [第4节 文化整合与管理圣经](http://www.baoguoding.com/2018/11/308-xyl04.html)
++ [第1节 许玉林 人力资源管理创新与重构](http://www.baoguoding.com/2018/10/305-xyl01.html)
++ [第2节 许玉林 人力资源管理的战略思考](http://www.baoguoding.com/2018/10/306-xyl02.html)
++ [第3节 许玉林 组织运行、制度体系与文化整合](http://www.baoguoding.com/2018/10/307-xyl03.html)
++ [第4节 许玉林 文化整合与管理圣经](http://www.baoguoding.com/2018/11/308-xyl04.html)
 
 第五章 经济学模块
-+ [第1节 宏观经济和大类资产：基本原理]()
-+ [第2节 转型宏观：增速换挡和高质量发展]()
-+ [第3节 中国经济形势与中美贸易战]()
-+ [第4节 机制设计的原理及应用]()
++ [第1节 任泽平 宏观经济和大类资产：基本原理]()
++ [第2节 任泽平 转型宏观：增速换挡和高质量发展]()
++ [第3节 任泽平 中国经济形势与中美贸易战]()
++ [第4节 埃里克·马斯金 机制设计的原理及应用]()
 
 第六章 市场营销模块
-+ [第1节 何为市场营销](http://www.baoguoding.com/2018/11/309-marketing01.html)
-+ [第2节 4P&4C理论与市场营销研发](http://www.baoguoding.com/2018/11/310-marketing02.html)
-+ [第3节 定价工具与技术](http://www.baoguoding.com/2018/11/311-marketing03.html)
-+ [第4节 注意力缺失世界中的品牌与促销](http://www.baoguoding.com/2018/11/312-marketing04.html)
++ [第1节 柏唯良 何为市场营销](http://www.baoguoding.com/2018/11/309-marketing01.html)
++ [第2节 柏唯良 4P&4C理论与市场营销研发](http://www.baoguoding.com/2018/11/310-marketing02.html)
++ [第3节 柏唯良 定价工具与技术](http://www.baoguoding.com/2018/11/311-marketing03.html)
++ [第4节 柏唯良 注意力缺失世界中的品牌与促销](http://www.baoguoding.com/2018/11/312-marketing04.html)
 
 第七章 公司金融模块
-+ [第1节 资本视角下的公司运营](http://www.baoguoding.com/2018/10/292-gsjrx01.html)
-+ [第2节 金融财务会计联动的资本战略](http://www.baoguoding.com/2018/10/293-gsjrx02.html)
-+ [第3节 产融结合的创新商业模式](http://www.baoguoding.com/2018/10/294-gsjrx03.html)
-+ [第4节 风险意识与财务管控](http://www.baoguoding.com/2018/10/295-gsjrx04.html)
-+ [第5节 投融资决策与企业价值管理](http://www.baoguoding.com/2018/10/296-gsjrx05.html)
++ [第1节 陈晋蓉 资本视角下的公司运营](http://www.baoguoding.com/2018/10/292-gsjrx01.html)
++ [第2节 陈晋蓉 金融财务会计联动的资本战略](http://www.baoguoding.com/2018/10/293-gsjrx02.html)
++ [第3节 陈晋蓉 产融结合的创新商业模式](http://www.baoguoding.com/2018/10/294-gsjrx03.html)
++ [第4节 陈晋蓉 风险意识与财务管控](http://www.baoguoding.com/2018/10/295-gsjrx04.html)
++ [第5节 陈晋蓉 投融资决策与企业价值管理](http://www.baoguoding.com/2018/10/296-gsjrx05.html)
 
 第八章 商业模式模块
-+ [第1节 商业模式的原理和实践上](http://www.baoguoding.com/2018/11/313-syms01.html)
-+ [第2节 商业模式和原理和实践下]()
-+ [第3节 “魏朱六要素商业模式”深度解构]()
-+ [第4节 商业模式与竞争优势]()
++ [第1节 魏炜 商业模式的原理和实践上](http://www.baoguoding.com/2018/11/313-syms01.html)
++ [第2节 魏炜 商业模式和原理和实践下]()
++ [第3节 魏炜 “魏朱六要素商业模式”深度解构]()
++ [第4节 魏炜 商业模式与竞争优势]()
 
 第九章 行为金融学模块
-+ [第1节 你必须正视的经济泡沫]()
-+ [第2节 代表性偏差与框架效应]()
-+ [第3节 过度自信与损失规避]()
-+ [第4节 高管的致命行为决策]()
++ [第1节 朱宁 你必须正视的经济泡沫]()
++ [第2节 朱宁 代表性偏差与框架效应]()
++ [第3节 朱宁 过度自信与损失规避]()
++ [第4节 朱宁 高管的致命行为决策]()
 
 第十章 战略管理模块
-+ [第1节 战略管理导论]()
-+ [第2节 战略的布局和段数]()
-+ [第3节 如何制定战略]()
-+ [第4节 谋和战略]()
-+ [第5节 进入阻绝和竞争战略]()
++ [第1节 汤明哲 战略管理导论]()
++ [第2节 汤明哲 战略的布局和段数]()
++ [第3节 汤明哲 如何制定战略]()
++ [第4节 汤明哲 谋和战略]()
++ [第5节 汤明哲 进入阻绝和竞争战略]()
 
 第十一章 市场与竞争
-+ [第1节 技术/制度创新与最伟大的企业]()
-+ [第2节 市场与产权]()
-+ [第3节 产权、规模效应与网络效应]()
-+ [第4节 破坏式创新与无线电故事]()
++ [第1节 张凯夫 技术/制度创新与最伟大的企业]()
++ [第2节 张凯夫 市场与产权]()
++ [第3节 张凯夫 产权、规模效应与网络效应]()
++ [第4节 张凯夫 破坏式创新与无线电故事]()
 
 第十二章 组织行为学模块
-+ [第1节 微观层面：颠覆认知，寻求魔镜]()
-+ [第2节 中观层面：激活群体，赋能团队]()
-+ [第3节 宏观层面：聚焦生态，再造组织]()
-+ [第4节 卓越领导：融会贯通，超越自我]()
++ [第1节 包季鸣 微观层面：颠覆认知，寻求魔镜]()
++ [第2节 包季鸣 中观层面：激活群体，赋能团队]()
++ [第3节 包季鸣 宏观层面：聚焦生态，再造组织]()
++ [第4节 包季鸣 卓越领导：融会贯通，超越自我]()
 
 第十三章 创新管理模块
-+ [第1节 三盒创新理论]()
-+ [第2节 逆向创新]()
-+ [第3节 数字化转型]()
-+ [第4节 解决执行难题]()
++ [第1节 维杰伊·戈文达拉扬 三盒创新理论]()
++ [第2节 维杰伊·戈文达拉扬 逆向创新]()
++ [第3节 维杰伊·戈文达拉扬 数字化转型]()
++ [第4节 维杰伊·戈文达拉扬 解决执行难题]()
 
 ---
 
